Portfolio/Pages/Internship/Internship.css
/*
Zain Kergaye
About me page formatting
*/

/*
Navigation panel
*/


html {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  background-color: #3c455c;
}

.everything{
  background-color:#ff9966;
  text-align: center;
}
nav { 
  padding: 5px; 
  text-align: center;
}
nav ul { 
  list-style: none; 
}
nav ul li {
  display: inline;
  margin-left: 15px;
  font-weight: bold; 
  color:black;
}
nav ul li a {
  color: rgb(0, 0, 0); 
  padding: 5px;
  
}
nav ul li a:visited {
  color: black; 
}
nav ul li a:hover { 
  color: black; 
}

/*end*/

/*Header*/
.header {
  padding: 60px;
  text-align: center;
  color: black;
  font-size: 30px;
}
/*Header*/

.sideimg{
  border-radius: 3px;
  border-width: 5px;
  image-rendering: auto;
  width:fit-content;
  height:fit-content;
}

/*Footer of the page*/

div.footer{
  padding: 5px;
  text-align: center;
}
/*End footer*/

